[gd_scene load_steps=8 format=2]

[ext_resource path="res://Lib/UI/Themes/main_theme.tres" type="Theme" id=1]
[ext_resource path="res://Lib/UI/player_ui.gd" type="Script" id=2]
[ext_resource path="res://Lib/UI/Themes/Kenney Pixel.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Lib/UI/menu_popup.gd" type="Script" id=4]
[ext_resource path="res://Lib/Assets/UI/menu-hamburger.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxTexture" id=2]

[node name="UI" type="CanvasLayer"]

[node name="PlayerUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="BottomContainer" type="HBoxContainer" parent="PlayerUI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 104.0
margin_right = -10.0
margin_bottom = -10.0

[node name="PlayerOutput" type="Panel" parent="PlayerUI/BottomContainer"]
self_modulate = Color( 0.176471, 0.176471, 0.176471, 1 )
margin_right = 216.0
margin_bottom = 66.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 3

[node name="PlayerLog" type="RichTextLabel" parent="PlayerUI/BottomContainer/PlayerOutput"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
custom_fonts/normal_font = SubResource( 1 )
text = "> You see before you a long hallway with stairs at the end. There is nothing in the way."
scroll_following = true

[node name="PlayerButtons" type="VBoxContainer" parent="PlayerUI/BottomContainer"]
margin_left = 220.0
margin_right = 300.0
margin_bottom = 66.0
alignment = 2

[node name="AbilitiesButton" type="Button" parent="PlayerUI/BottomContainer/PlayerButtons"]
margin_top = 23.0
margin_right = 80.0
margin_bottom = 43.0
rect_min_size = Vector2( 20, 20 )
text = "Abilities"

[node name="PlayButton" type="Button" parent="PlayerUI/BottomContainer/PlayerButtons"]
self_modulate = Color( 0.415686, 1, 0.466667, 1 )
margin_top = 47.0
margin_right = 80.0
margin_bottom = 66.0
rect_min_size = Vector2( 80, 0 )
size_flags_vertical = 8
text = "Play_Turn()"

[node name="MenuPopup" type="Popup" parent="PlayerUI"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="PlayerUI/MenuPopup"]
modulate = Color( 0, 0, 0, 0.596078 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MenuContainer" type="CenterContainer" parent="PlayerUI/MenuPopup"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MenuButtons" type="VBoxContainer" parent="PlayerUI/MenuPopup/MenuContainer"]
margin_left = 110.0
margin_top = 69.0
margin_right = 210.0
margin_bottom = 111.0
rect_min_size = Vector2( 100, 0 )

[node name="ResetButton" type="Button" parent="PlayerUI/MenuPopup/MenuContainer/MenuButtons"]
margin_right = 100.0
margin_bottom = 19.0
text = "Reset Game"

[node name="CloseButton" type="Button" parent="PlayerUI/MenuPopup/MenuContainer/MenuButtons"]
margin_top = 23.0
margin_right = 100.0
margin_bottom = 42.0
text = "Close"

[node name="MenuButton" type="Button" parent="PlayerUI"]
margin_left = 296.0
margin_top = 8.0
margin_right = 312.0
margin_bottom = 24.0
custom_styles/normal = SubResource( 2 )
icon = ExtResource( 5 )
icon_align = 1

[connection signal="pressed" from="PlayerUI/BottomContainer/PlayerButtons/PlayButton" to="PlayerUI" method="_on_PlayButton_pressed"]
[connection signal="pressed" from="PlayerUI/MenuPopup/MenuContainer/MenuButtons/ResetButton" to="PlayerUI/MenuPopup" method="_on_ResetButton_pressed"]
[connection signal="pressed" from="PlayerUI/MenuPopup/MenuContainer/MenuButtons/CloseButton" to="PlayerUI/MenuPopup" method="_on_CloseButton_pressed"]
[connection signal="pressed" from="PlayerUI/MenuButton" to="PlayerUI" method="_on_MenuButton_pressed"]
